--- a/recommendations.html
+++ b/recommendations.html
@@ -12,7 +12,7 @@
                 <h1>Recommendations</h1>
             </div>
             <div class="nav-links">
-                <a href="about.html">About</a>
+                <a href="index.html">About</a>
                 <a href="projects.html">Projects</a>
                 <a href="recommendations.html">Recommendations</a>
                 <a href="resume.html">Resume</a>
