--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,27 @@
                 <div class="project-black-background-box">
                     <div class="project-title-video-container">
                         <div class="title-text">
+                            Wonder Well DEMO
+                        </div>
+                        <div class="project-video">
+                            <img src="images/wonderwell homescreen.png"/>
+                        </div>
+                    </div>
+                    <div class="normal-text">
+                        This is a "bare bones" version of my project, 
+                        where I demonstrate all of the core mechanics of the game.
+                         These include the complex random level generation, the inventory and spells menu,
+                          being able to interact with NPCs and objects, and the display of the music and art.
+                        I am always working on this project in my free time, so I will come out with an updated version soon enough!
+                        Check out the playthrough on Youtube below!
+                    </div>
+                    <div class="project-button-container">
+                    <a href="https://www.youtube.com/watch?v=aZgN6P1vQ8g" class="project-button">Youtube</a>
+                    </div>
+                </div>
+                <div class="project-black-background-box">
+                    <div class="project-title-video-container">
+                        <div class="title-text">
                             Digit Guesser with CNNs
                         </div>
                         <div class="project-video">
@@ -39,26 +60,6 @@
                      </div>
                     <div class="project-button-container">
                     <a href="https://github.com/jeremy-lucas-mcgill/Recognizing-Digits-With-CNNs" class="project-button">Github</a>
-                    </div>
-                </div>
-                <div class="project-black-background-box">
-                    <div class="project-title-video-container">
-                        <div class="title-text">
-                            Q-Learning in Grid World
-                        </div>
-                        <div class="project-video">
-                            <img src="gifs/RL_gridworld_project.gif"/>
-                        </div>
-                    </div>
-                    <div class="normal-text">
-                        This project involved implementing a Q-Learning algorithm from scratch.
-                         The Blue Player utilizes a Q-table, which is updated with state-action values during the training phase.
-                          In this phase, the agent explores the environment with a stochastic policy, gradually learning the optimal actions
-                           by visiting various states. During the evaluation phase, or "Run," the agent adopts a deterministic policy,
-                            using the Q-table to navigate the environment and maximize the accumulated reward.
-                    </div>
-                    <div class="project-button-container">
-                    <a href="https://github.com/jeremy-lucas-mcgill/Q-Learning-GridWorld" class="project-button">Github</a>
                     </div>
                 </div>
                 <div class="project-black-background-box">
@@ -85,6 +86,26 @@
                 </div>
             </div>
             <div class="project-content-container">
+                <div class="project-black-background-box">
+                    <div class="project-title-video-container">
+                        <div class="title-text">
+                            Q-Learning in Grid World
+                        </div>
+                        <div class="project-video">
+                            <img src="gifs/RL_gridworld_project.gif"/>
+                        </div>
+                    </div>
+                    <div class="normal-text">
+                        This project involved implementing a Q-Learning algorithm from scratch.
+                         The Blue Player utilizes a Q-table, which is updated with state-action values during the training phase.
+                          In this phase, the agent explores the environment with a stochastic policy, gradually learning the optimal actions
+                           by visiting various states. During the evaluation phase, or "Run," the agent adopts a deterministic policy,
+                            using the Q-table to navigate the environment and maximize the accumulated reward.
+                    </div>
+                    <div class="project-button-container">
+                    <a href="https://github.com/jeremy-lucas-mcgill/Q-Learning-GridWorld" class="project-button">Github</a>
+                    </div>
+                </div>
                 <div class="project-black-background-box">
                     <div class="project-title-video-container">
                         <div class="title-text">
